--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,60 +26,56 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_rating_stars: ^1.0.1
+  awesome_notifications: null
+  bot_toast: ^4.1.3
+  cached_network_image: null
+  carousel_slider: ^5.0.0
+  change_app_package_name: ^1.0.0
+  cloud_firestore: ^4.7.1
+  convex_bottom_bar: ^3.2.0
+  cupertino_icons: ^1.0.2
+  firebase_auth:
+  firebase_core: 
+  firebase_messaging: 
+  firebase_storage: null
   flutter:
     sdk: flutter
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_lints: ^2.0.0
-  permission_handler: ^11.0.1
-  random_string: ^2.3.1
-  convex_bottom_bar: ^3.2.0
-  rate: ^0.0.2
-  flutter_carousel_slider:
-  google_fonts: ^4.0.4
-  share_plus: ^10.0.0
-  get: ^4.6.5
-  flutter_local_notifications: ^14.1.0
+  flutter_carousel_slider: null
   flutter_carousel_widget: ^3.0.1
-  get_storage:
-  flutter_svg:
-  flutter_launcher_icons: ^0.13.1
-  awesome_notifications:
-  search_map_location: ^0.0.6
-  geolocator: ^9.0.2
-  url_launcher: ^6.3.0
-  intl:
-  geocoding:
-  location: ^5.0.3
   flutter_firebase_recaptcha: ^1.0.2
-  uuid: ^4.2.1
-  firebase_core: ^2.24.0
-  google_maps_flutter: ^2.5.0
-  firebase_auth: ^4.15.0
-  animated_rating_stars: ^1.0.1
-  change_app_package_name: ^1.0.0
-  firebase_storage:
-  firebase_messaging: ^14.6.6
-  iconsax:
-  image_picker:
-  cloud_firestore: ^4.7.1
-  toggle_switch: ^2.3.0
-  bot_toast: ^4.1.3
+  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^2.0.0
+  flutter_local_notifications: ^17.2.2
   flutter_localizations:
     sdk: flutter
+  flutter_rating_bar: ^4.0.0
+  flutter_svg: null
+  geocoding: null
+  geolocator: ^9.0.2
+  get: ^4.6.5
+  get_storage: null
+  google_fonts: ^4.0.4
+  google_maps_flutter: ^2.5.0
+  iconly: ^1.0.1
+  iconsax: null
+  image_picker: null
+  intl: null
   intl_phone_field: ^3.2.0
+  location: ^5.0.3
+  permission_handler: ^11.0.1
+  random_string: ^2.3.1
+  rate: ^0.0.2
+  search_map_location: ^0.0.6
+  share_plus: ^10.0.0
+  shared_preferences: ^2.3.2
+  toggle_switch: ^2.3.0
+  url_launcher: ^6.3.0
+  uuid: ^4.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
-
 flutter_launcher_icons:
   ios: true
   android: true
@@ -87,7 +83,6 @@ flutter_launcher_icons:
   image_path: "assets/images/logo.png"
 
 # For information on the generic Dart part of this file, see the
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -101,7 +96,6 @@ flutter:
     - assets/images/
     - assets/icon/
     - assets/google_fonts/
-
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
