--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 <!--    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />-->
 
     <application
-        android:label="دليل اليمن "
+        android:label=" I NEED "
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
