--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 dependencies:
   animated_rating_stars: ^1.0.1
   awesome_notifications: null
+  awesome_snackbar_content: ^0.1.4
   bot_toast: ^4.1.3
   cached_network_image: null
   carousel_slider: ^5.0.0
@@ -35,9 +36,9 @@ dependencies:
   cloud_firestore: ^4.7.1
   convex_bottom_bar: ^3.2.0
   cupertino_icons: ^1.0.2
-  firebase_auth:
-  firebase_core: 
-  firebase_messaging: 
+  firebase_auth: null
+  firebase_core: null
+  firebase_messaging: null
   firebase_storage: null
   flutter:
     sdk: flutter
@@ -48,6 +49,7 @@ dependencies:
   flutter_local_notifications: ^17.2.2
   flutter_localizations:
     sdk: flutter
+  flutter_onboarding_slider: ^1.0.11
   flutter_rating_bar: ^4.0.0
   flutter_svg: null
   geocoding: null
@@ -56,24 +58,27 @@ dependencies:
   get_storage: null
   google_fonts: ^4.0.4
   google_maps_flutter: ^2.5.0
-  awesome_snackbar_content: ^0.1.4
+  google_sign_in: ^6.2.1
+  googleapis: ^13.2.0   
+  googleapis_auth: ^1.4.0
   iconly: ^1.0.1
   iconsax: null
   image_picker: null
   intl: null
-  flutter_onboarding_slider: ^1.0.11
   intl_phone_field: ^3.2.0
   location: ^5.0.3
   permission_handler: ^11.0.1
-  google_sign_in: ^6.2.1
   random_string: ^2.3.1
   rate: ^0.0.2
-  search_map_location: ^0.0.6
+  search_map_location:
   share_plus: ^10.0.0
   shared_preferences: ^2.3.2
   toggle_switch: ^2.3.0
   url_launcher: ^6.3.0
   uuid: ^4.2.1
+dependency_overrides:
+  win32: ^5.5.4
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_launcher_icons: "^0.14.1"
