--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
     sdk: flutter
   flutter_carousel_slider: null
   flutter_carousel_widget: ^3.0.1
+  flutter_dotenv: ^5.1.0
   flutter_firebase_recaptcha: ^1.0.2
   flutter_lints: ^2.0.0
   flutter_local_notifications: ^17.2.2
@@ -59,7 +60,7 @@ dependencies:
   google_fonts: ^4.0.4
   google_maps_flutter: ^2.5.0
   google_sign_in: ^6.2.1
-  googleapis: ^13.2.0   
+  googleapis: ^13.2.0
   googleapis_auth: ^1.4.0
   iconly: ^1.0.1
   iconsax: null
@@ -70,7 +71,7 @@ dependencies:
   permission_handler: ^11.0.1
   random_string: ^2.3.1
   rate: ^0.0.2
-  search_map_location:
+  search_map_location: null
   share_plus: ^10.0.0
   shared_preferences: ^2.3.2
   toggle_switch: ^2.3.0
@@ -89,6 +90,8 @@ flutter_launcher_icons:
   android: true
   remove_alpha_ios: true
   image_path: "assets/images/logo2.jpg"
+  adaptive_icon_foreground: "assets/images/logo2.jpg"
+  adaptive_icon_background: "assets/images/logo2.jpg"
 
 # For information on the generic Dart part of this file, see the
 # The following section is specific to Flutter packages.
